--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,20 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header {
+  color: #ee6e73;
+  font-weight: 300;
+  text-align: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#send-btn{
+  margin-left: 23%;
+  padding-right: 29px;
 }
 
-.App-intro {
-  font-size: large;
+#saved-articles-btn{
+  margin-left: 23%;
+
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+
